--- a/adm/style/pmmonitor.html
+++ b/adm/style/pmmonitor.html
@@ -43,7 +43,7 @@
 			{% if pm.S_ROW_COUNT is even %}<tr class="row1">{% else %}<tr class="row2">{% endif %}
 				<td style="text-align: center;"><input type="checkbox" class="radio" name="mark[]" value="{pm.PM_ID}" /></td>
 				{% if S_CAN_READ %}
-					<td class="cursor" onclick="ShowHide('{pm.PM_KEY}')">{pm.PM_SUBJECT}</td>
+					<td style="cursor:pointer" onclick="ShowHide('{pm.PM_KEY}')">{pm.PM_SUBJECT}</td>
 				{% else %}
 					<td>{pm.PM_SUBJECT}</td>
 				{% endif %}
@@ -66,8 +66,8 @@
 
 <br />
 	
-<input class="button2" type="submit" value="{{ lang('DELETE_PMS}') }}" name="delete" />
-<p class="small"><a href="#" onclick="marklist('pm_monitor', 'mark', true); return false;">{{ lang('MARK_ALL}') }}</a> &bull; <a href="#" onclick="marklist('pm_monitor', 'mark', false); return false;">{{ lang('UNMARK_ALL}') }}</a></div>
+<input class="button2" type="submit" value="{{ lang('DELETE_PMS') }}" name="delete" />
+<p class="small"><a href="#" onclick="marklist('pm_monitor', 'mark', true); return false;">{{ lang('MARK_ALL') }}</a> &bull; <a href="#" onclick="marklist('pm_monitor', 'mark', false); return false;">{{ lang('UNMARK_ALL') }}</a></div>
 
 <div class="pagination">
 	{% if pagination %}
