--- a/adm/style/pmmonitor.html
+++ b/adm/style/pmmonitor.html
@@ -1,4 +1,5 @@
 {% include 'overall_header.html' %}
+{% INCLUDECSS '@david63_pmmonitor/pmmonitor.css' %}
 
 <a name="maincontent"></a>
 
@@ -79,4 +80,5 @@
 
 </form>
 
+{% INCLUDEJS '@david63_pmmonitor/dropdown.js' %}
 {% include 'overall_footer.html' %}
