--- a/adm/style/pmmonitor.html
+++ b/adm/style/pmmonitor.html
@@ -21,7 +21,7 @@
 
 <fieldset class="display-options">
 	<strong>{{ lang('SORT_BY') }} :</strong> {S_SORT_KEY} {S_SORT_DIR}
-	<input class="button2" type="submit" value="{{ lang('GO}') }}" name="sort" />
+	<input class="button2" type="submit" value="{{ lang('GO') }}" name="sort" />
 </fieldset>
 
 <table class="table1 zebra-table fixed-width-table">
