Updated version display

--- a/adm/style/pmmonitor.html
+++ b/adm/style/pmmonitor.html
@@ -4,8 +4,8 @@
 <a name="maincontent"></a>
 
 <h1>{{ lang('PM_MONITOR_READ') }}</h1>
-{PM_MONITOR_VERSION}<br /><br />
 <p>{{ lang('PM_MONITOR_READ_EXPLAIN') }}</p>
+<span class="version_name">{{ lang('VERSION') }}{{ lang('COLON') }}</span><span class="version">{PM_MONITOR_VERSION}</span>
 <hr />
 
 <form id="pm_monitor" method="post" action="{U_ACTION}">
